@startuml
left to right direction

interface view.view {
~ void update(Player[],Field[])
~ String promptPlayer(String[],String)
}


interface enities.chancecards.ChanceAction {
~ void getOutOfJail()
~ void changeBal(int)
~ void moveToField(int)
~ void payPerProperty(int,int)
}
class entities.GameBoard {
+ void fieldAction(Player)
+ boolean rollDieMovePlayer()
+ boolean isGameover()
}
class entities.Player {







+ boolean isJailed()
+ double totalValue()
}




class enities.chancecards.Deck {
-ChanceCard[] cards
+ void pullCard()
}

class entities.ChanceCardImpl {
~ GameBoard gameBoard
~ view view
+ void getOutOfJail()
+ void changeBal(int)
+ void moveToField(int)
+ void payPerProperty(int,int)
}

abstract class entities.fields.Field {


# FieldPair pair
+ FieldPair getPair()
+ int getPosition()
# void parse(String)
+ {abstract}Field executeFieldAction(FieldAction)
+ String getName()
}
class language.LanguageController {
+ String getMessage(String)
}
class entities.fields.FieldPair {
+ int[] getFieldIds()
+ Color getBackgroundColor()
}
abstract class entities.dicecup.Die {
~ int faceValue
~ {abstract}void roll()
~ int getFaceValue()
}


class entities.dicecup.DiceCup {
+ int getSum()
+ boolean diceAreEqual()
+ int[] getDiceValues()
+ void roll()
}
class controller.GameController {
+ void playGame()
+ void playTurn(Player)
}



class view.GuiView {
+ void update(Player[],Field[])
+ String promptPlayer(String[],String)
}



abstract class enities.chancecards.ChanceCard {
# String desc
+ {abstract}void executeCardAction(ChanceAction)
}
class entities.FieldImpl {
~ GameBoard gameBoard
~ view view
+ Field streetAction(Street)
}
class Main {
+ {static} void main(String[])
}

interface entities.fields.FieldAction {
~ Field streetAction(Street)
~ void streetPayRentToOwner(Street);
}





enities.chancecards.ChanceAction <|.up. entities.ChanceCardImpl
entities.fields.FieldAction <|.up. entities.FieldImpl
view.view <|.. view.GuiView
controller.GameController --> view.view
controller.GameController --> entities.GameBoard
entities.GameBoard -down-->entities.dicecup
Main -->controller.GameController
entities.GameBoard --->language.LanguageController
entities.fields.FieldAction<..entities.fields.Field

@enduml